Push till Mattias
please Publish

--- a/Blackjack/src/Blackjack.Web/Views/Blackjack/Index.cshtml
+++ b/Blackjack/src/Blackjack.Web/Views/Blackjack/Index.cshtml
@@ -26,6 +26,7 @@
 else
 {
     <h3>Dina kort:</h3>
+    <h4>Summa: <span id="playerValue">@Model.PlayerHandValue</span></h4>
     <ul>
         @foreach (var card in Model.PlayerHand)
         {
