--- a/Blackjack/src/Blackjack.Web/Views/Index.cshtml
+++ b/Blackjack/src/Blackjack.Web/Views/Index.cshtml
@@ -15,6 +15,7 @@
 else
 {
     <h3>Player Hand</h3>
+    <h4>Player Value: <span id="playerValue">@Model.PlayerHandValue</span></h4>
     <ul>
         @foreach (var card in Model.PlayerHand)
         {
