Försökt fixa selenium-testerna

--- a/Blackjack/src/Blackjack.Web/Views/Blackjack/Index.cshtml
+++ b/Blackjack/src/Blackjack.Web/Views/Blackjack/Index.cshtml
@@ -43,7 +43,7 @@ else
         }
     </ul>
 
-    @if (!Model.IsGameOver)
+    @if (!Model.IsGameOver && Model.PlayerHand.Any() && @Model.PlayerHandValue < 21)
     {
         <h3>Dealerns första kort:</h3>
         <ul>
