--- a/Blackjack/src/Blackjack.Web/Views/Blackjack/Index.cshtml
+++ b/Blackjack/src/Blackjack.Web/Views/Blackjack/Index.cshtml
@@ -46,11 +46,20 @@ else
     @if (!Model.IsGameOver && Model.PlayerHand.Any() && @Model.PlayerHandValue < 21)
     {
         <h3>Dealerns första kort:</h3>
+        <h4>Summa: <span id="dealerValue">@Model.DealerHandValue</span></h4>
         <ul>
             <li>
                 @if (Model.DealerHand != null && Model.DealerHand.Any())
                 {
-                    @($"{Model.DealerHand.First().Rank} av {Model.DealerHand.First().Suit}")
+                    string rankText = Model.DealerHand.First().Rank switch
+                    {
+                        1 => "Ess",
+                        11 => "Knekt",
+                        12 => "Dam",
+                        13 => "Kung",
+                        _ => Model.DealerHand.First().Rank.ToString()
+                    };
+                    @(rankText + " av " + Model.DealerHand.First().Suit)
                 }
                 else
                 {
@@ -68,6 +77,7 @@ else
     else
     {
         <h3>Dealerns kort:</h3>
+        <h4>Summa: <span id="dealerValue">@Model.DealerHandValue</span></h4>
         <ul>
             @foreach (var card in Model.DealerHand)
             {
@@ -85,7 +95,11 @@ else
         </ul>
         <h4>
             Resultat:
-            @if (Model.Result == Blackjack.Core.Models.GameResult.PlayerWin)
+            @if (Model.PlayerHand.Count() == 2 && Model.PlayerHandValue == 21)
+            {
+                <span>Du fick blackjack!</span>
+            }
+            else if (Model.Result == Blackjack.Core.Models.GameResult.PlayerWin)
             {
                 <span>Du vann!</span>
             }
